# Stable-Diffusion-NCNN

./: .gitignore  .gitmodules  LICENSE  README.md  README_zh.md
android/: .project
android/app/src/main/jni/: CMakeLists.txt  blazeface.cpp  blazeface.h  decoder_slover.cpp  decoder_slover.h  diffusion_slover.cpp  diffusion_slover.h  encoder_slover.cpp  encoder_slover.h  makeup_jni.cpp  parsing.cpp  parsing.h  prompt_slover.cpp  prompt_slover.h  transfer.cpp  transfer.h
android/app/src/main/jni/ncnn-20221128-android-vulkan/arm64-v8a/include/ncnn/: allocator.h  benchmark.h  blob.h  c_api.h  command.h  cpu.h  datareader.h  gpu.h  layer.h  layer_shader_type.h  layer_type.h  mat.h  modelbin.h  net.h  option.h  paramdict.h  pipeline.h  pipelinecache.h  platform.h  simpleocv.h  simpleomp.h  simplestl.h  vulkan_header_fix.h
android/app/src/main/jni/ncnn-20221128-android-vulkan/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
android/app/src/main/jni/opencv-mobile-4.6.0-android/sdk/native/jni/: OpenCVConfig.cmake
android/app/src/main/jni/opencv-mobile-4.6.0-android/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig-version.cmake  OpenCVModules-release.cmake
android/app/src/main/jni/opencv-mobile-4.6.0-android/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
x86/exe/: magic.txt
x86/linux/: .gitignore  CMakeLists.txt
x86/linux/assets/: UNetModel-256-256-MHA-fp16-opt.param  vocab.txt
x86/linux/include/: decoder_slover.h  diffusion_slover.h  getmem.h  prompt_slover.h
x86/linux/src/: diffusion_slover.cpp  opencv-mobile_ncnn-demo.cpp
(+83 files in other folders)
